# ironshield

./: .gitignore  CONTEXT.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docs.yml  plugin_check.yml  release.yml  security.yml
docs/en/: configuration.md  install.md
docs/fa/: troubleshooting.md
ironshield/: __init__.py  version.py
ironshield/agent/: __init__.py  api.py  collector.py  main.py
ironshield/api/: __init__.py  client.py  handlers.py  routes.py  server.py
ironshield/bot/: __init__.py  main.py
ironshield/cli/: __init__.py  display.py  installer.py  main.py
ironshield/core/: __init__.py  benchmark_engine.py  config_engine.py  failover_engine.py  health_check.py  monitoring.py  plugin_manager.py  plugin_updater.py  service_manager.py  smart_routing.py  tunnel_manager.py
ironshield/db/: __init__.py  database.py  models.py
ironshield/services/: __init__.py  base.py
ironshield/utils/: __init__.py  crypto.py  logger.py  network.py  security.py  system.py  validators.py
scripts/: install.sh  uninstall.sh  update.sh
scripts/services/: install_backhaul.sh  install_frp.sh  install_gost.sh  install_openvpn.sh  install_phormal.sh  install_storm_dns.sh  install_vxlan.sh
scripts/utils/: backup.sh  check_deps.sh  restore.sh
tests/: conftest.py
tests/unit/: test_agent.py  test_agent_route_branches.py  test_api.py  test_api_token_comparison.py  test_auth_middleware_security.py  test_base_service_contract.py  test_bot.py  test_cli.py  test_core_engines.py  test_database.py  test_failover_engine_behavior.py  (+7 more)
(+30 files in other folders)
