[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ironshield"
version = "1.0.0"
description = "Automated VPN & Tunnel Management Platform for Iran/Foreign Server Setup"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["vpn", "tunnel", "openvpn", "iran", "proxy"]

dependencies = [
    "python-telegram-bot==20.7",
    "rich==13.7.0",
    "questionary==2.0.1",
    "click==8.1.7",
    "psutil==5.9.8",
    "paramiko==3.4.0",
    "httpx==0.25.2",
    "SQLAlchemy==2.0.25",
    "alembic==1.13.1",
    "PyYAML==6.0.1",
    "python-dotenv==1.0.1",
    "Jinja2==3.1.3",
    "cryptography==42.0.2",
    "python-jose==3.3.0",
    "aiofiles==23.2.1",
    "asyncio-mqtt==0.16.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-mock==3.12.0",
    "pytest-cov==4.1.0",
    "black==23.12.1",
    "flake8==7.0.0",
    "bandit==1.7.7",
    "safety==3.0.1",
    "pre-commit==3.6.0",
    "shellcheck-py==0.9.0.6",
]

[project.scripts]
ironshield = "ironshield.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["ironshield*", "plugins*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["ironshield"]
omit = ["tests/*", "*/migrations/*"]
